<resources>
    <string name="app_name">Energy Conservation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="increasing_demand_the_world_over_and_ever_increasing_prices_of_energy_have_provided_a_justifiable_reason_for_improving_energy_efficiences_of_all_energy_intensive_technologies_some_methods_of_saving_energy_are_as_follows">Increasing demand the world over and ever-increasing prices of energy have provided a justifiable reason for improving energy efficiences of all energy intensive technologies. Some methods of saving energy are as follows:</string>
    <string name="geysers_consume_the_maximum_amount_of_electricity_thermostat_can_be_set_to_a_lower_temperature_45_degrees_to_50_degrees_celsius">Geysers consume the maximum amount of electricity. Thermostat can be set to a lower temperature 45 degrees to 50 degrees celsius</string>
    <string name="do_not_keep_computer_tv_tape_recorder_music_system_in_stand_by_mode_you_can_save_70_kilowatt_hour_per_year">Do not keep computer, TV, tape recorder, music system in stand by mode. You can save 70-kilowatt hour per year</string>
    <string name="use_compat_fluorescent_lamps_cfl_in_place_of_incandescent_bulbs_a_23_watt_compact_fluorescent_bulb_can_replace_90_or_100_watt">Use compat fluorescent lamps(CFL) in place of incandescent bulbs. A 23-watt compact fluorescent bulb can replace 90 or 100 watt</string>
    <string name="use_task_lighting_whenever_possible_instead_of_brightly_lightening_an_entire_area_or_room">Use task lighting whenever possible instead of brightly lightening an entire area or room</string>
    <string name="maximum_sunlight_should_be_used_during_the_day_blbs_and_tubelights_should_not_be_used_during_day">Maximum sunlight should be used during the day. Blbs and tubelights should not be used during day</string>
    <string name="the_basic_and_most_important_ways_just_turn_off_the_lights_when_not_in_use">The basic and most important ways just turn off the lights when not in use</string>
    <string name="regular_cleaning_of_filter_in_air_conditioning_systems_and_cleaning_of_condenser_conserve_energy">Regular cleaning of filter in air conditioning systems and cleaning of condenser conserve energy</string>
    <string name="cooling_in_air_conditioned_houses_should_be_maintained_at_25_degrees">Cooling in air conditioned houses should be maintained at 25 degrees</string>
    <string name="use_room_conditioning_only_where_needed_and_install_energy_efficient_models">Use room conditioning only where needed and install energy efficient models</string>
    <string name="an_evaporative_cooler_should_be_installed">An evaporative cooler should be installed</string>
    <string name="west_facing_windows_should_be_shaded_a_whole_house_fan_can_be_used_to_draw_cool_night_air_into_the_house">West facing windows should be shaded. A whole house fan can be used to draw cool night air into the house.</string>
    <string name="windows_should_be_closed_daytime">Windows should be closed daytime.</string>
    <string name="we_should_open_windows_at_night_to_bring_cool_air_inside">We should open windows at night, to bring cool air inside.</string>
    <string name="a_huge_amount_of_energy_is_wasted_in_cooling_following_cooling_measures_can_be_taken_to_conserve_energy">A huge amount of energy is wasted in cooling. Following cooling measures can be taken to conserve energy:</string>
    <string name="door_of_the_fridge_should_not_be_opened_several_times">Door of the fridge should not be opened several times.</string>
    <string name="before_putting_food_in_the_refrigerator_it_should_be_cooled_up_to_room_temperature">Before putting food in the refrigerator it should be cooled up to room temperature.</string>
    <string name="uncovered_liquids_should_not_be_put_in_the_refrigerators_as_it_will_give_extra_workload_to_the_compressor">Uncovered liquids should not be put in the refrigerators as it will give extra workload to the compressor</string>
    <string name="if_the_door_of_the_fridge_is_not_closed_properly_it_wil_consume_much_more_energy">If the door of the fridge is not closed properly it wil consume much more energy</string>
    <string name="we_should_keep_the_fridge_full_as_possible_and_it_should_be_kept_in_that_position_that_its_outside_surface_is_not_exposed_to_direct_sunlight">We should keep the fridge full as possible and it should be kept in that position that its outside surface is not exposed to direct sunlight.</string>
    <string name="it_should_be_maintained_at_37_degree_fahrenheit_to_40_degree_fahrenheit_and_freezer_section_at_50_degree_fahrenheit_and_should_have_automatic_moisture_control">It should be maintained at 37 degree fahrenheit to 40 degree fahrenheit and freezer section at 50 degree fahrenheit and should have automatic moisture control</string>
    <string name="condenser_is_found_either_behind_the_fridge_and_underneath_the_fridge_and_helps_in_maintaining_its_lower_temperature_we_can_conserve_energy_while_using_refrigerator_in_following_ways">Condenser is found either behind the fridge and underneath the fridge and helps in maintaining its lower temperature. We can conserve energy while using refrigerator in following ways:</string>
    <string name="for_large_items_stove_top_cooking_is_most_efficient_especially_with_gas">For large items, stove-top cooking is most efficient, especially with gas</string>
    <string name="when_preheating_an_oven_for_baking_time_the_preheat_period_carefully_minutes_should_be_sufficient">When preheating an oven for baking , time the preheat period carefully, minutes should be sufficient.</string>
    <string name="rearrange_oven_shelves_before_turning_your_oven_on_and_do_not_peep_in_oven_every_time_the_oven_is_opened_temperature_is_lowered_by_4_to_5_degree_celsius">Rearrange oven shelves before turning your oven on and do not peep in oven. Every time the oven is opened temperature is lowered by 4 to 5 degree celsius.</string>
    <string name="one_should_cook_as_much_of_the_meal_in_the_oven_at_one_time_as_possible">One should cook as much of the meal in the oven at one time as possible.</string>
    <string name="begin_cooking_on_highest_heat_until_liquid_begins_to_boil_then_lower_the_settings_and_allow_food_to_simmer_until_fully_cooked">Begin cooking on highest heat until liquid begins to boil. Then lower the settings and allow food to simmer until fully cooked</string>
    <string name="carefully_measure_water_used_for_cooking_to_avoid_having_to_head_needed">Carefully measure water used for cooking to avoid having to head needed.</string>
    <string name="keep_reflector_pass_beneath_stove_top_heating_ele_ents_bright_and_clear">Keep reflector pass beneath stove top heating ele,ents bright and clear.</string>
    <string name="we_should_use_lids_on_cooking_to_permit_temperature_over_heating">We should use \'lids-on\' cooking to permit temperature over heating</string>
    <string name="the_over_door_should_not_have_any_cracks_or_tears_in_it">The over door should not have any cracks or tears in it.</string>
    <string name="we_should_use_microwaves_as_they_consume_50_less_energy_than_conventional_ovens">We should use microwaves as they consume 50% less energy than conventional ovens.</string>
    <string name="to_conserve_energy_while_using_ovens_we_should_keep_in_mind_the_following">To conserve energy while using ovens we should keep in mind the following:</string>
    <string name="soak_or_pre_wash_the_clothes_for_effective_cleaning_as_well_as_to_reduce_energy_consumption">Soak or pre wash the clothes for effective cleaning as well as to reduce energy consumption.</string>
    <string name="wash_only_full_loads_of_clothing_but_do_not_overload_machine">Wash only full loads of clothing but do not overload machine.</string>
    <string name="follow_detergent_instructions_carefully_adding_too_much_detergent_for_effective_washing_action_may_require_more_energy">Follow detergent instructions carefully. Adding too much detergent for effective washing action may require more energy.</string>
    <string name="we_should_try_to_use_cold_water_while_washing_and_rinsing_as_almost_90_of_the_energy_consumed_by_washing_machine_is_used_to_heat_the_water">We should try to use cold water while washing and rinsing as almost 90% of the energy consumed by washing machine is used to heat the water.</string>
    <string name="washing_machines_consumes_20_of_the_electricity_energy_can_be_conserved_during_the_use_of_washing_machine_in_the_following_ways">Washing machines consumes 20% of the electricity. Energy can be conserved during the use of washing machine in the following ways</string>
    <string name="everyday_we_iron_our_clothes_it_consumes_approximately_1000_watt_energy_which_is_a_huge_amount_but_we_can_save_energy_by_ironing_clothing_in_bulk_and_not_just_one_or_two_at_a_time_ensure_that_the_thermostat_on_the_iron_is_working_and_set_the_right_temperature_for_the_clothing_being_ironed">Everyday we iron our clothes. It consumes approximately 1000-watt energy, which is a huge amount. But we can save energy by ironing clothing in bulk and not just one or two at a time. Ensure that the thermostat on the iron is working and set the right temperature for the clothing being ironed.</string>
    <string name="we_can_do_our_bit_towards_energy_conservation_by_proper_utilisation_of_all_electrical_appliances_click_on_each_item_below_to_see_in_details">We can do our bit towards energy conservation by proper utilisation of all electrical appliances. Click on each item below to see in details:</string>
    <string name="we_can_do_our_bit_towards_energy_conservation_by_proper_utilisation_of_all_electrical_appliances_click_on_any_item_below_to_see_in_details">italic_titl</string>
    <string name="we_can_do_our_bit_for_energy_conservation_by_proper_use_of_electrical_appliances_click_on_the_items_below_to_see_in_details">We can do our bit for energy conservation by proper use of electrical appliances. Click on the items below to see in details:</string>
    <string name="water_heating_is_one_of_the_largest_energy_expenses_in_your_home_after_space_heating_and_cooling_appliances_it_typically_accounts_for_about_16_percent_of_your_utility_bill_heated_water_is_used_for_showers_baths_laundry_dish_washing_and_general_cleaning_there_are_four_ways_to_use_it_efficiently_and_cut_your_water_heating_bills">Water heating is one of the largest energy expenses in your home after space heating and cooling appliances. It typically accounts for about 16 percent of your utility bill. Heated water is used for showers, baths, laundry, dish washing, and general cleaning. There are four ways to use it efficiently and cut your water heating bills:</string>
    <string name="most_water_heater_thermostats_are_set_much_higher_than_necessary_lowering_the_temperature_setting_on_your_water_heater_can_save_energy_a_new_energy_efficient_tankless_water_heater_can_save_100_or_more_annually_in_water_heating_costs_a_solar_water_heating_system_can_save_up_to_250_a_year">Most water heater thermostats are set much higher than necessary. Lowering the temperature setting on your water heater can save energy. A new, energy efficient tankless water heater can save $100 or more annually in water-heating costs. A solar water-heating system can save up to $250 a year.</string>
    <string name="buy_a_new_more_efficient_water_heater">Buy a new, more efficient water heater.</string>
    <string name="insulate_your_water_heater_and_pipes">Insulate your water heater and pipes.</string>
    <string name="turn_down_the_thermostat_on_your_water_heater">Turn down the thermostat on your water heater.</string>
    <string name="use_less_hot_water">Use less hot water.</string>
</resources>