<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthItemFragment">


    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/oven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/to_conserve_energy_while_using_ovens_we_should_keep_in_mind_the_following"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/we_should_use_microwaves_as_they_consume_50_less_energy_than_conventional_ovens"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/the_over_door_should_not_have_any_cracks_or_tears_in_it"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/we_should_use_lids_on_cooking_to_permit_temperature_over_heating"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/keep_reflector_pass_beneath_stove_top_heating_ele_ents_bright_and_clear"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/carefully_measure_water_used_for_cooking_to_avoid_having_to_head_needed"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/begin_cooking_on_highest_heat_until_liquid_begins_to_boil_then_lower_the_settings_and_allow_food_to_simmer_until_fully_cooked"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/one_should_cook_as_much_of_the_meal_in_the_oven_at_one_time_as_possible"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/rearrange_oven_shelves_before_turning_your_oven_on_and_do_not_peep_in_oven_every_time_the_oven_is_opened_temperature_is_lowered_by_4_to_5_degree_celsius"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/when_preheating_an_oven_for_baking_time_the_preheat_period_carefully_minutes_should_be_sufficient"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/for_large_items_stove_top_cooking_is_most_efficient_especially_with_gas"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>