<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondItemFragment">


    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/air_conditioner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/a_huge_amount_of_energy_is_wasted_in_cooling_following_cooling_measures_can_be_taken_to_conserve_energy"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/we_should_open_windows_at_night_to_bring_cool_air_inside"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/windows_should_be_closed_daytime"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/west_facing_windows_should_be_shaded_a_whole_house_fan_can_be_used_to_draw_cool_night_air_into_the_house"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/an_evaporative_cooler_should_be_installed"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/use_room_conditioning_only_where_needed_and_install_energy_efficient_models"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/cooling_in_air_conditioned_houses_should_be_maintained_at_25_degrees"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/regular_cleaning_of_filter_in_air_conditioning_systems_and_cleaning_of_condenser_conserve_energy"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>