<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdItemFragment">


    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/refrigerator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/condenser_is_found_either_behind_the_fridge_and_underneath_the_fridge_and_helps_in_maintaining_its_lower_temperature_we_can_conserve_energy_while_using_refrigerator_in_following_ways"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/it_should_be_maintained_at_37_degree_fahrenheit_to_40_degree_fahrenheit_and_freezer_section_at_50_degree_fahrenheit_and_should_have_automatic_moisture_control"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/we_should_keep_the_fridge_full_as_possible_and_it_should_be_kept_in_that_position_that_its_outside_surface_is_not_exposed_to_direct_sunlight"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/if_the_door_of_the_fridge_is_not_closed_properly_it_wil_consume_much_more_energy"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/uncovered_liquids_should_not_be_put_in_the_refrigerators_as_it_will_give_extra_workload_to_the_compressor"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/before_putting_food_in_the_refrigerator_it_should_be_cooled_up_to_room_temperature"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="4dp"
                android:text="@string/door_of_the_fridge_should_not_be_opened_several_times"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>